--- a/style.css
+++ b/style.css
@@ -73,8 +73,12 @@ article p {
   margin: 1.5rem 4rem;
 }
 
-
-
+.footer--increase {
+  font-size: 1.5rem;
+  font-family: var(--font);
+  font-weight: bold;
+  letter-spacing: 1.2px;
+}
 
 
 /*------------------------------------*\
@@ -132,8 +136,13 @@ place-items: stretch;
   display: block;
 }
 
+.footer__phone {
+  padding: 1rem;
+}
 
-
+.footer__text {
+  padding-bottom: 2rem;;
+}
 
 
 /*------------------------------------*\
@@ -241,19 +250,20 @@ footer {
 .footer__contact {
   text-transform: uppercase;
   text-align: center;
-  padding-top: 1.5rem;
+  padding-top: 2rem;
   letter-spacing: .5rem;
   font-weight:bold;
   font-size: 1.5rem;
 }
 
 .footer__phone {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   text-align: center;
-  font-family: var(--font);
 }
 
 .footer__icons {
-  margin-top: -3rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -306,8 +316,6 @@ margin-bottom: -2rem;
 }
 
 .footer--increase {
-  font-size: 1.1rem;
-  letter-spacing: 1.2px;
   animation-name: increase;
   animation-duration: 0.9s;
   animation-direction: alternate;
