--- a/style.css
+++ b/style.css
@@ -84,7 +84,8 @@ article {
 }
 
 article p {
-  margin: 1.5rem 4rem;
+  margin: 1.5rem 5rem;
+  padding: 1rem;
 }
 
 .footer--increase {
@@ -133,8 +134,8 @@ article p {
 }
 
 .header__text--warning {
+  margin: 0 3rem 2 rem 3 rem;
   padding-top: 0;
-  margin-bottom: 2rem;
   color: var(--highlight-color);
 }
 
@@ -148,8 +149,8 @@ article p {
 \*------------------------------------*/
 
 body {
-width: 100vw;
-height: 100vh;
+width: 100%;
+height: 100%;
 }
 
 header {grid-area:  header;}
@@ -216,7 +217,7 @@ place-items: stretch;
 
 header {
 text-align: center;
-width: 100vw;
+width: 100%;
 }
 
 .header__logo {
@@ -245,6 +246,23 @@ a.header__button:hover {
   background-color: var(--blue-transparent);
   transition: all .2s ease;
 }
+
+.header__text--warning {
+  background-color: var(--highlight-color);
+  font-weight: 4500;
+  color: var(--bg-color);
+  padding: 1rem;
+  border-radius: 15px;
+}
+
+.cut__warning {
+  color: var(--product-bacground);
+}
+
+.cut__warning:hover {
+  color: var(--font-color);
+}
+
 
 
 
@@ -324,7 +342,7 @@ footer {
  background-color: var(--highlight-color);
  display: flex;
  justify-content: center;
- width: 100vw;
+ width: 100%;
  text-align: center;
  font-family: var(--font);
 }
