--- a/gifts.css
+++ b/gifts.css
@@ -81,11 +81,13 @@ p, .product__text, .header__text {
 
 article {
   font-family: var(--font);
+  padding: .5rem 1.5rem;
 }
 
 article p {
   margin: 1.5rem 5rem;
   padding: 1rem;
+  text-align: left;
 }
 
 .footer--increase {
@@ -112,6 +114,7 @@ article p {
 
 .small-text {
   font-size: .8rem;
+  padding: 0 .5rem;
 }
 
 .cut__warning {
@@ -135,7 +138,7 @@ article p {
 
 .header__text--warning {
   margin: 0 3rem 2 rem 3 rem;
-  padding-top: 0;
+  padding: 0 5rem;
   color: var(--highlight-color);
 }
 
