--- a/gifts.css
+++ b/gifts.css
@@ -81,12 +81,11 @@ p, .product__text, .header__text {
 
 article {
   font-family: var(--font);
-  padding: .5rem 1.5rem;
+  padding: .5rem 6.5rem;
 }
 
 article p {
-  margin: 1.5rem 5rem;
-  padding: 1rem;
+  margin: 1.5rem .5rem;
   text-align: left;
 }
 
@@ -137,8 +136,6 @@ article p {
 }
 
 .header__text--warning {
-  margin: 0 3rem 2 rem 3 rem;
-  padding: 0 5rem;
   color: var(--highlight-color);
 }
 
@@ -154,6 +151,7 @@ article p {
 body {
 width: 100%;
 height: 100%;
+background-color: var(--bg-color);
 }
 
 header {grid-area:  header;}
@@ -164,8 +162,7 @@ main   {grid-area: main;}
 
 footer {grid-area: footer;}
 
-.wrapper {
-background-color: var(--bg-color);
+.wrapper {  
   display: grid;
   gap: 0.1rem;
   grid-template-areas: 
@@ -180,6 +177,13 @@ main {
   text-align: center;
   width: 85%;
   grid-auto-rows: 1fr;
+}
+
+
+@media (max-width: 1000px) {
+  article {
+    padding: .5rem;
+  }
 }
 
 @media (min-width: 860px) and (max-width: 1199px) {
